--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             </li>
             <li>
                 <a href="#contato">Contato</a>
-            </li>            
+            </li>
+            
         </ul>
     </nav>
     <main>
@@ -101,7 +102,7 @@
 
         <section id="depoimento">
             <h2>Depoimento</h2>
-            <p> EM BREVE DEPOIMENTOS DOS NOSSOS ALUNOS DOR VIDEOS OU TEXTOS FIQUE ATENTOS</p>
+            <p> EM BREVE DEPOIMENTOS DOS NOSSOS ALUNOS POR VIDEOS OU TEXTOS FIQUE ATENTOS</p>
         </section>
 
         <section id="contato" class="contato">
@@ -113,7 +114,7 @@
         </section>       
     </main>
     <footer>
-        <p>&copy; 2025 Aline Cordeiro. Todos os direitos reservados.</p>        
+        <p>&copy; 2025 Aula de canto. Todos os direitos reservados.</p>        
 </body>
 
 </html>
