Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         <section id="contato" class="contato">
             <h2>Contato</h2>
-            <p>PARA MAIS INFORMAÇAÕES, ENTRE EM CONTATO PELO NOSSO WHATAPP:</p>
+            <p>PARA MAIS INFORMAÇÕES, ENTRE EM CONTATO PELO NOSSO WHATAPP:</p>
             <img src="./img/botão whatsapp.jpeg" alt="WhatsApp" width="50">
             <p><a href="https://wa.me/5511980181872" target="_blank">Clique aqui para enviar uma mensagem</a></p>  
 
