--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
         </section>       
     </main>
+     <script src="script.js"></script>
     <footer>
         <p>&copy; 2025 Aula de canto. Todos os direitos reservados.</p>        
 </body>
