adicionado img logo no arquivo idex.html, midea query no arquivo.css e settings.json

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
-    <header>
+    <header class="cabecalho">
         <h1>Aula de Canto com Aline Cordeiro</h1>
     </header>
-    <nav class="menu">
+    <nav class="container navegacao">
+        <div class="Logo">
+            <img src="./img/Logo.jpg"  width="100">            
         <ul>
             <li>
                 <a href="#quem-sou-eu">Quem Sou Eu</a>
@@ -29,7 +31,7 @@
             <li>
                 <a href="#contato">Contato</a>
             </li>
-            
+           </div> 
         </ul>
     </nav>
     <main>
