adicionado div e class no arquivo index.html

--- a/index.html
+++ b/index.html
@@ -14,110 +14,128 @@
     </header>
     <nav class="container navegacao">
         <div class="Logo">
-            <img src="./img/Logo.jpg"  width="100">            
-        <ul>
-            <li>
-                <a href="#quem-sou-eu">Quem Sou Eu</a>
-            </li>
-            <li>
-                <a href="#sobre">Sobre</a>
-            </li>
-            <li>
-                <a href="#video-aula">Vídeo Aula</a>
-            </li>
-            <li>
-                <a href="#depoimento">Depoimento</a>
-            </li>
-            <li>
-                <a href="#contato">Contato</a>
-            </li>
-           </div> 
+            <img src="./img/Logo.jpg" width="100">
+            <ul class="menu">
+                <li>
+                    <a href="#quem-sou-eu">Quem Sou Eu</a>
+                </li>
+                <li>
+                    <a href="#sobre">Sobre</a>
+                </li>
+                <li>
+                    <a href="#video-aula">Vídeo Aula</a>
+                </li>
+                <li>
+                    <a href="#depoimento">Depoimento</a>
+                </li>
+                <li>
+                    <a href="#contato">Contato</a>
+                </li>
+        </div>
         </ul>
     </nav>
     <main>
-        <section id="quem-sou-eu">
+        <section class="quem-sou-eu" id="quem-sou-eu">
             <figure>
                 <img src="./img/Aline.jpg.jpg" alt="Aline Cordeiro" width="300">
                 <figcaption>Aline Cordeiro</figcaption>
             </figure>
-            <h2>Quem Sou Eu</h2>
-            <p> MUITO PRAZER SOU ALINE, SOU CANTORA E PROFESORA DE CANTO HÁ MAIS DE 17 ANOS.
-                <br>
-                TENHO FORMAÇÃO TÉCNICA EM CANTO PELA ETEC DE ARTES DE SÃO PAULO, SOU INSCRITA NA OMB (ORDEM DOS MÚSICOS
-                DO BRASIL), SOB O REGISTRO Nº 59306 E TRABALHO PROFISSIONALMENTE COM MÚSICA HÁ MAIS DE 20 ANOS.
-                <br>
-                CANTAR SEMPRE FOI MINHA PAIXÃO COMECEI COM 3 ANOS DE IDADE CANTANDO NA IGREJA CATÓLICA, E DESDE ENTÃO
-                CANTAR TEM SIDO A MINHA E JORNADA.
-                <br>
-                ATUO COMO CANTORA, O QUE FAZ COM QUE EU COMPREENDA A REAL NECESSIDADE DOS DOS MEUS ALUNOS, ENSINO CANTO
-                EM CERIMÔNIA DE CASAMENTO HÁ MAIS DE 20 ANOS, JÁ PARTICIPEI E FUI VENCEDORA EM DOIS FESTIVAIS DE MÚSICA
-                AUTORAL, CANTEI 10 ANOS EM COLAÇÕES DE GRAU, ALÉM DOS DIVERSOS EVENTOS QUE FIZ E FAÇO ATÉ HOJE.
-                <br>
-                AGREGO A MÚSICA, SOU TERAPEUTA, E UNO OS DOIS CONHECIMENTOS, ALÉM DA ESCOLA DA VIDA MUSICAL QUE TENHO,
-                PARA OFERECER O MEU MELHOR A QUEM CHEGA PARA APRENDER A CANTAR COM MEU JEITO ÚNICO DE ENSINAR, USANDO
-                MEU PRÓPRIO MÉTODO FAZENDO DAS AULAS UM MOMENTO ALEGRE, LEVE E DIVERTIDO.
-                <br>
-                NAS AULAS DE CANTO, DEDICO-ME AO ENSINO, AJUDANDO OUTROS A DESCOBRIREM E APERFEIÇOAREM SUAS PRÓPRIAS
-                VOZES.
-                <br>
-                ACREDITO QUE A MÚSICA É UMA FORMA PODEROSA DE EXPRESSÃO E CONEXÃO ENTRE AS PESSOAS, E É ISSO QUE ME
-                MOTIVA A CONTINUAR NESSE CAMMINHO.
-                <br>
-                MINHA ABORDAGEM NO ENSINO DO CANTO É PERSONALIZADA CONSIDERANDO AS NECESSIDADES E OBJETIVOS DE CADA
-                ALUNO, BUSCANDO SEMPRE INSPIRAR CONFIANÇA E PROPORCIONAR UM AMBIENTE ACOLHEDOR E ESTIMULANTE PARA MEUS
-                ALUNOS.
-                <br>
-                ACREDITO QUE TODOS TÊM POTENCIAL PARA CANTAR E QUE, COM ORIENTAÇÃO ADEQUADA E PRÁTICA, É POSSÍVEL
-                DESENVOLVER HABILIDADES VOCAIS EXCEPCIONAIS.
-                <br>
-                MINHA AULA É PARA TODOS QUE FAZEM USO DA VOZ, SEJA PARA USO PROFISSIONAL OU NÃO, PODE SER TAMBÉM PARA
-                MELHORIA DA FALA E DO SEU JEITO DE SE COMUNICAR, POIS TRABALHAMOS VÁRIOS ASPECTOS USANDO NOSSO CORPO
-                COMO NOSSO MAIOR INSTRUMENTO.
-                <br>
-                CANTAR É MEDICINAL, CANTAR É TERAPÊUTICO, CANTAR É SE REENCONTRAR CONSIGO MESMO, CANTAR É TERAPIA, É
-                REZAR DUAS VEZES, "QUEM CANTA SEUS MALES ESPANTA"
-                <!DOCTYPE html>
-                <br>
-                <br>
-                <strong> CANTAR É SEU SONHO, TE ENSINAR É MINHA REALIZAÇÃO. ATT: ALINE CORDEIRO DA SILVA</strong>
+            <div class="container">
+                <h2>Quem Sou Eu</h2>
+                <p> MUITO PRAZER SOU ALINE, SOU CANTORA E PROFESORA DE CANTO HÁ MAIS DE 17 ANOS.
+                    <br>
+                    TENHO FORMAÇÃO TÉCNICA EM CANTO PELA ETEC DE ARTES DE SÃO PAULO, SOU INSCRITA NA OMB (ORDEM DOS
+                    MÚSICOS
+                    DO BRASIL), SOB O REGISTRO Nº 59306 E TRABALHO PROFISSIONALMENTE COM MÚSICA HÁ MAIS DE 20 ANOS.
+                    <br>
+                    CANTAR SEMPRE FOI MINHA PAIXÃO COMECEI COM 3 ANOS DE IDADE CANTANDO NA IGREJA CATÓLICA, E DESDE
+                    ENTÃO
+                    CANTAR TEM SIDO A MINHA E JORNADA.
+                    <br>
+                    ATUO COMO CANTORA, O QUE FAZ COM QUE EU COMPREENDA A REAL NECESSIDADE DOS DOS MEUS ALUNOS, ENSINO
+                    CANTO
+                    EM CERIMÔNIA DE CASAMENTO HÁ MAIS DE 20 ANOS, JÁ PARTICIPEI E FUI VENCEDORA EM DOIS FESTIVAIS DE
+                    MÚSICA
+                    AUTORAL, CANTEI 10 ANOS EM COLAÇÕES DE GRAU, ALÉM DOS DIVERSOS EVENTOS QUE FIZ E FAÇO ATÉ HOJE.
+                    <br>
+                    AGREGO A MÚSICA, SOU TERAPEUTA, E UNO OS DOIS CONHECIMENTOS, ALÉM DA ESCOLA DA VIDA MUSICAL QUE
+                    TENHO,
+                    PARA OFERECER O MEU MELHOR A QUEM CHEGA PARA APRENDER A CANTAR COM MEU JEITO ÚNICO DE ENSINAR,
+                    USANDO
+                    MEU PRÓPRIO MÉTODO FAZENDO DAS AULAS UM MOMENTO ALEGRE, LEVE E DIVERTIDO.
+                    <br>
+                    NAS AULAS DE CANTO, DEDICO-ME AO ENSINO, AJUDANDO OUTROS A DESCOBRIREM E APERFEIÇOAREM SUAS PRÓPRIAS
+                    VOZES.
+                    <br>
+                    ACREDITO QUE A MÚSICA É UMA FORMA PODEROSA DE EXPRESSÃO E CONEXÃO ENTRE AS PESSOAS, E É ISSO QUE ME
+                    MOTIVA A CONTINUAR NESSE CAMMINHO.
+                    <br>
+                    MINHA ABORDAGEM NO ENSINO DO CANTO É PERSONALIZADA CONSIDERANDO AS NECESSIDADES E OBJETIVOS DE CADA
+                    ALUNO, BUSCANDO SEMPRE INSPIRAR CONFIANÇA E PROPORCIONAR UM AMBIENTE ACOLHEDOR E ESTIMULANTE PARA
+                    MEUS
+                    ALUNOS.
+                    <br>
+                    ACREDITO QUE TODOS TÊM POTENCIAL PARA CANTAR E QUE, COM ORIENTAÇÃO ADEQUADA E PRÁTICA, É POSSÍVEL
+                    DESENVOLVER HABILIDADES VOCAIS EXCEPCIONAIS.
+                    <br>
+                    MINHA AULA É PARA TODOS QUE FAZEM USO DA VOZ, SEJA PARA USO PROFISSIONAL OU NÃO, PODE SER TAMBÉM
+                    PARA
+                    MELHORIA DA FALA E DO SEU JEITO DE SE COMUNICAR, POIS TRABALHAMOS VÁRIOS ASPECTOS USANDO NOSSO CORPO
+                    COMO NOSSO MAIOR INSTRUMENTO.
+                    <br>
+                    CANTAR É MEDICINAL, CANTAR É TERAPÊUTICO, CANTAR É SE REENCONTRAR CONSIGO MESMO, CANTAR É TERAPIA, É
+                    REZAR DUAS VEZES, "QUEM CANTA SEUS MALES ESPANTA"
+                    <!DOCTYPE html>
+                    <br>
+                    <br>
+                    <strong> CANTAR É SEU SONHO, TE ENSINAR É MINHA REALIZAÇÃO. ATT: ALINE CORDEIRO DA SILVA</strong>
+            </div>
         </section>
-        <section id="sobre">
-            <h2>Sobre</h2>
-            <p> AULA PARTICULAR DE CANTO
-                <br>
-                INDIVIDUAL E ONLINE
-                <br>
-                1 AULA POR SEMANA COM DURAÇÃO DE 1 HORA.
-                <br>
-                TODO MATERIAL DE APOIO É INVIADO PELOS CANAIS DE WHATSAPP, E/OU TELEGRAM.
-                <br>
-                O PAGAMENTO DA MENSALIDADE É FEITO VIA PIX, EM NOME DE ALINE CORDEIRO DA SILVA, NO CPF: 322.039.078-19,
-                A SER FEITO SEMPRE NA PRIMEIRA AULA DO MÊS, OU EM DATA FIXA, CONFORME FOR PREVIAMENTE COMBINADO.
-            </p>
+        <section class="sobre" id="sobre">
+            <div class="container">
+                <h2>Sobre</h2>
+                <p> AULA PARTICULAR DE CANTO
+                    <br>
+                    INDIVIDUAL E ONLINE
+                    <br>
+                    1 AULA POR SEMANA COM DURAÇÃO DE 1 HORA.
+                    <br>
+                    TODO MATERIAL DE APOIO É INVIADO PELOS CANAIS DE WHATSAPP, E/OU TELEGRAM.
+                    <br>
+                    O PAGAMENTO DA MENSALIDADE É FEITO VIA PIX, EM NOME DE ALINE CORDEIRO DA SILVA, NO CPF:
+                    322.039.078-19,
+                    A SER FEITO SEMPRE NA PRIMEIRA AULA DO MÊS, OU EM DATA FIXA, CONFORME FOR PREVIAMENTE COMBINADO.
+                </p>
+            </div>
         </section>
 
 
-        <section id="video-aula">
-            <h2>Vídeo Aula</h2>
-            <p> EM BREVE DISPONILIZAMOS AS VIDEO-AULAS PARA MELHORAR SEU DESEVOLVIMENTO NO ENSINO</p>
+        <section class="video-aula" id="video-aula">
+            <div class="container">
+                <h2>Vídeo Aula</h2>
+                <p> EM BREVE DISPONILIZAMOS AS VIDEO-AULAS PARA MELHORAR SEU DESEVOLVIMENTO NO ENSINO</p>
+            </div>
         </section>
 
-        <section id="depoimento">
-            <h2>Depoimento</h2>
-            <p> EM BREVE DEPOIMENTOS DOS NOSSOS ALUNOS POR VIDEOS OU TEXTOS FIQUE ATENTOS</p>
+        <section class="depoimento" id="depoimento">
+            <div class="container">
+                <h2>Depoimento</h2>
+                <p> EM BREVE DEPOIMENTOS DOS NOSSOS ALUNOS POR VIDEOS OU TEXTOS FIQUE ATENTOS</p>
+            </div>
         </section>
 
-        <section id="contato" class="contato">
-            <h2>Contato</h2>
-            <p>PARA MAIS INFORMAÇÕES, ENTRE EM CONTATO PELO NOSSO WHATAPP:</p>
-            <img src="./img/botão whatsapp.jpeg" alt="WhatsApp" width="50">
-            <p><a href="https://wa.me/5511980181872" target="_blank">Clique aqui para enviar uma mensagem</a></p>  
-
-        </section>       
+        <section class="contato" id="contato">
+            <div class="container">
+                <h2>Contato</h2>
+                <p>PARA MAIS INFORMAÇÕES, ENTRE EM CONTATO PELO NOSSO WHATAPP:</p>
+                <img src="./img/botão whatsapp.jpeg" alt="WhatsApp" width="50">
+                <p><a href="https://wa.me/5511980181872" target="_blank">Clique aqui para enviar uma mensagem</a></p>
+            </div>
+        </section>
     </main>
-     <script src="script.js"></script>
+    <script src="script.js"></script>
     <footer>
-        <p>&copy; 2025 Aula de canto. Todos os direitos reservados.</p>        
+        <p>&copy; 2025 Aula de canto. Todos os direitos reservados.</p>
 </body>
 
 </html>
